--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sfhuskie.plugins</groupId>
-	<artifactId>tabchar-maven-plugin</artifactId>
+	<artifactId>tabspace-formatter-maven-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<doclint>none</doclint>
 	</properties>
 	<licenses>
 		<license>
@@ -54,6 +55,16 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-javadoc-plugin</artifactId>
+		        <version>3.1.1</version>
+		        <configuration>
+		          <show>private</show>
+		          <nohelp>true</nohelp>
+		          <doclint>all,-missing</doclint>
+		        </configuration>
+	      	</plugin>
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
@@ -107,22 +118,11 @@
 					<goal>jar</goal>
 					</goals>
 					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
-				<configuration>
-				<encoding>UTF-8</encoding>
-				</configuration>
-				<executions>
 					<execution>
 						<id>attach-javadoc</id>
 						<goals>
 						</goals>
-					</execution>  
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
