[maven-release-plugin] prepare release v1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sfhuskie.plugins</groupId>
 	<artifactId>tabspace-formatter-maven-plugin</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
 	<packaging>maven-plugin</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,7 +30,7 @@
 		<connection>scm:git:git://github.com/steventongsf/tabspace-maven-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:steventongsf/tabspace-maven-plugin.git</developerConnection>
 		<url>https://github.com/dexecutor/dependent-tasks-executor</url>
-		<tag>HEAD</tag>
+		<tag>v1.0.0</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
