--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
 	<groupId>com.sfhuskie.plugins</groupId>
 	<artifactId>tabspace-formatter-maven-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <name>>tabspace-formatter-maven-plugin</name>
+    <description>tab and space formatter</description>
+    <url>https://github.com/steventongsf/tabspace-formatter-maven-plugin</url>
 	<packaging>maven-plugin</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
