--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<connection>scm:git:git://github.com/steventongsf/whitespace-maven-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:steventongsf/whitespace-maven-plugin.git</developerConnection>
 		<url>https://github.com/steventongsf/whitespace-maven-plugin</url>
-		<tag>HEAD</tag>
+		<tag>whitespace-formatter-maven-plugin-1.0.0</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
